force-app/main/default/objects/copado__User_Story__c/fields/AdHoc__c.field-meta.xml
<CustomField>
    <fullName>AdHoc__c</fullName>
    <label>AdHoc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Hotfix</fullName>
            </value>
            <value>
                <fullName>Exception &amp; Hotfix</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>