force-app/main/default/objects/copado__User_Story__c/fields/Apex_Code_Coverage_Exception__c.field-meta.xml
<CustomField>
    <fullName>Apex_Code_Coverage_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field helps in providing test class exception to user story.</description>
    <inlineHelpText>This field helps in providing test class exception to user story.</inlineHelpText>
    <label>Apex Code Coverage Exception</label>
    <type>Checkbox</type>
</CustomField>