force-app/main/default/objects/copado__User_Story__c/fields/Approved_Change_Story__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_Story__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Change Story</label>
    <type>Checkbox</type>
</CustomField>