force-app/main/default/objects/copado__User_Story__c/fields/Back_Promotion_Completed__c.field-meta.xml
<CustomField>
    <fullName>Back_Promotion_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Promotion Completed</label>
    <type>Checkbox</type>
</CustomField>