force-app/main/default/objects/copado__User_Story__c/fields/Change_Story__c.field-meta.xml
<CustomField>
    <fullName>Change_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Story</label>
    <referenceTo>Change_Story__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>