force-app/main/default/objects/copado__User_Story__c/fields/Commit_Task__c.field-meta.xml
<CustomField>
    <fullName>Commit_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commit&amp;Task</label>
    <type>Checkbox</type>
</CustomField>