force-app/main/default/objects/copado__User_Story__c/fields/Credential_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credential_Change_Reason__c</fullName>
    <label>Credential Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommit</fullName>
            </value>
            <value>
                <fullName>Revert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>