force-app/main/default/objects/copado__User_Story__c/fields/Deployment_Count__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Count__c</fullName>
    <label>Deployment Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>