force-app/main/default/objects/copado__User_Story__c/fields/Deployment_Request__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Request__c</fullName>
    <label>Deployment Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deploy to QA</fullName>
            </value>
            <value>
                <fullName>Deploy to QAR15</fullName>
            </value>
            <value>
                <fullName>Deploy to UAT</fullName>
            </value>
            <value>
                <fullName>Deploy to UAT2</fullName>
            </value>
            <value>
                <fullName>Deploy to Pre-Prod</fullName>
            </value>
            <value>
                <fullName>Deploy to PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>