force-app/main/default/objects/copado__User_Story__c/fields/Developer_UserId__c.field-meta.xml
<CustomField>
    <fullName>Developer_UserId__c</fullName>
    <label>Developer UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>