force-app/main/default/objects/copado__User_Story__c/fields/Devops_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Devops_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devops Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>