force-app/main/default/objects/copado__User_Story__c/fields/Exception_Approver__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approver__c</fullName>
    <label>Exception Approver</label>
    <type>Email</type>
</CustomField>