force-app/main/default/objects/copado__User_Story__c/fields/Exception_Hotfix_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Exception_Hotfix_Requirement__c</fullName>
    <label>Exception &amp; Hotfix Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Hotfix</fullName>
            </value>
            <value>
                <fullName>Hotfix &amp; Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>