force-app/main/default/objects/copado__User_Story__c/fields/Exception_Justification__c.field-meta.xml
<CustomField>
    <fullName>Exception_Justification__c</fullName>
    <label>Exception_Justification</label>
    <type>TextArea</type>
</CustomField>