force-app/main/default/objects/copado__User_Story__c/fields/Failed_Counter__c.field-meta.xml
<CustomField>
    <fullName>Failed_Counter__c</fullName>
    <label>Failed Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>