force-app/main/default/objects/copado__User_Story__c/fields/Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Go_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go-Live</label>
    <type>Checkbox</type>
</CustomField>