force-app/main/default/objects/copado__User_Story__c/fields/Has_Commit_or_Task__c.field-meta.xml
<CustomField>
    <fullName>Has_Commit_or_Task__c</fullName>
    <formula>OR(of_Commits__c &gt; 0, of_Tasks__c &gt; 0,  Metadata__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Commit or Task</label>
    <type>Checkbox</type>
</CustomField>