force-app/main/default/objects/copado__User_Story__c/fields/Hotfix__c.field-meta.xml
<CustomField>
    <fullName>Hotfix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hotfix</label>
    <type>Checkbox</type>
</CustomField>