force-app/main/default/objects/copado__User_Story__c/fields/INT_Deployed_Time__c.field-meta.xml
<CustomField>
    <fullName>INT_Deployed_Time__c</fullName>
    <label>INT Deployed Time</label>
    <type>DateTime</type>
</CustomField>