force-app/main/default/objects/copado__User_Story__c/fields/Justification_for_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Coverage__c</fullName>
    <label>Justification for Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>