force-app/main/default/objects/copado__User_Story__c/fields/Latest_SCM_Exception__c.field-meta.xml
<CustomField>
    <fullName>Latest_SCM_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest SCM Exception</label>
    <referenceTo>SC_Matrix_Exception_Approval__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>