force-app/main/default/objects/copado__User_Story__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <label># Metadata</label>
    <summaryForeignKey>copado__User_Story_Metadata__c.copado__User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>