force-app/main/default/objects/copado__User_Story__c/fields/of_Commits__c.field-meta.xml
<CustomField>
    <fullName>of_Commits__c</fullName>
    <label># of Commits</label>
    <summaryForeignKey>copado__User_Story_Commit__c.copado__User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>