force-app/main/default/objects/copado__User_Story__c/fields/of_CustomLabels__c.field-meta.xml
<CustomField>
    <fullName>of_CustomLabels__c</fullName>
    <label># of CustomLabels</label>
    <summaryFilterItems>
        <field>copado__User_Story_Metadata__c.copado__Metadata_API_Name__c</field>
        <operation>startsWith</operation>
        <value>CustomLabels.CustomLabels</value>
    </summaryFilterItems>
    <summaryForeignKey>copado__User_Story_Metadata__c.copado__User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>