force-app/main/default/objects/copado__User_Story__c/fields/of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>of_Tasks__c</fullName>
    <label># of Tasks</label>
    <summaryForeignKey>copado__Deployment_Task__c.copado__User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>