force-app/main/default/objects/copado__User_Story__c/fields/Offcycle_Release_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Offcycle_Release_Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offcycle Release Playbook</label>
    <referenceTo>Release_Playbook__c</referenceTo>
    <relationshipLabel>Offcycle User Stories</relationshipLabel>
    <relationshipName>Offcycle_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>