force-app/main/default/objects/copado__User_Story__c/fields/Pending_Deployment_Tasks_to_Review__c.field-meta.xml
<CustomField>
    <fullName>Pending_Deployment_Tasks_to_Review__c</fullName>
    <inlineHelpText>Count of Deployment Tasks that have yet to be reviewed by Devops</inlineHelpText>
    <label>Pending Deployment Tasks to Review</label>
    <summaryFilterItems>
        <field>copado__Deployment_Task__c.Reviewed_By__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>copado__Deployment_Task__c.copado__Type__c</field>
        <operation>equals</operation>
        <value>Manual Task, Delete MetaData</value>
    </summaryFilterItems>
    <summaryForeignKey>copado__Deployment_Task__c.copado__User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>