force-app/main/default/objects/copado__User_Story__c/fields/Preprod_Deployment_Time__c.field-meta.xml
<CustomField>
    <fullName>Preprod_Deployment_Time__c</fullName>
    <label>Preprod Deployment Time</label>
    <type>DateTime</type>
</CustomField>