force-app/main/default/objects/copado__User_Story__c/fields/Previous_Environments__c.field-meta.xml
<CustomField>
    <fullName>Previous_Environments__c</fullName>
    <label>Previous Environments</label>
    <length>225</length>
    <type>Text</type>
</CustomField>