force-app/main/default/objects/copado__User_Story__c/fields/Priority_Severity__c.field-meta.xml
<CustomField>
    <fullName>Priority_Severity__c</fullName>
    <label>Priority/Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>