force-app/main/default/objects/copado__User_Story__c/fields/QA_Check__c.field-meta.xml
<CustomField>
    <fullName>QA_Check__c</fullName>
    <formula>OR (ISPICKVAL(QA_Testable__c,&apos;&apos;) ,AND( ISPICKVAL(QA_Testable__c,&apos;Yes&apos;),QA_Tester__c = NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA Check</label>
    <type>Checkbox</type>
</CustomField>