force-app/main/default/objects/copado__User_Story__c/fields/QA_Testable__c.field-meta.xml
<CustomField>
    <fullName>QA_Testable__c</fullName>
    <label>QA Testable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>