force-app/main/default/objects/copado__User_Story__c/fields/QA_Tester__c.field-meta.xml
<CustomField>
    <fullName>QA_Tester__c</fullName>
    <label>QA Tester</label>
    <type>TextArea</type>
</CustomField>