force-app/main/default/objects/copado__User_Story__c/fields/Release_Playbook_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Playbook_Name__c</fullName>
    <formula>copado__Release__r.Release_Playbook__r.Release_Playbook_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Playbook Name</label>
    <type>Text</type>
</CustomField>