force-app/main/default/objects/copado__User_Story__c/fields/SC_Matrix_Approvals_Provided__c.field-meta.xml
<CustomField>
    <fullName>SC_Matrix_Approvals_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SC Matrix Approvals Provided</label>
    <type>Checkbox</type>
</CustomField>