force-app/main/default/objects/copado__User_Story__c/fields/SCM_BPR_Commit_Complete__c.field-meta.xml
<CustomField>
    <fullName>SCM_BPR_Commit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to determine if the commit is completed after the back promotion is completed successfully</description>
    <label>SCM BPR Commit Complete</label>
    <type>Checkbox</type>
</CustomField>