force-app/main/default/objects/copado__User_Story__c/fields/SCM_Exception_Provided__c.field-meta.xml
<CustomField>
    <fullName>SCM_Exception_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCM Exception Provided</label>
    <type>Checkbox</type>
</CustomField>