force-app/main/default/objects/copado__User_Story__c/fields/Shared_Component_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Shared_Component_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared Component Dependency</label>
    <type>Checkbox</type>
</CustomField>