force-app/main/default/objects/copado__User_Story__c/fields/Story_Deployed_To_Environment__c.field-meta.xml
<CustomField>
    <fullName>Story_Deployed_To_Environment__c</fullName>
    <label>Story Deployed To Environment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TrnInt</fullName>
            </value>
            <value>
                <fullName>TrnUat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>