force-app/main/default/objects/copado__User_Story__c/fields/Story_Held_In_Environment__c.field-meta.xml
<CustomField>
    <fullName>Story_Held_In_Environment__c</fullName>
    <label>Story Held In Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>