force-app/main/default/objects/copado__User_Story__c/fields/Tag_Release__c.field-meta.xml
<CustomField>
    <fullName>Tag_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tag Release</label>
    <type>Checkbox</type>
</CustomField>