force-app/main/default/objects/copado__User_Story__c/fields/UAT_Deployment_Time__c.field-meta.xml
<CustomField>
    <fullName>UAT_Deployment_Time__c</fullName>
    <label>UAT Deployment Time</label>
    <type>DateTime</type>
</CustomField>