force-app/main/default/objects/copado__User_Story__c/recordTypes/Service_Cloud_Bug.recordType-meta.xml
<RecordType>
    <fullName>Service_Cloud_Bug</fullName>
    <active>true</active>
    <label>Service Cloud - Bug</label>
</RecordType>