force-app/main/default/objects/copado__User_Story__c/recordTypes/Service_Cloud_User_Story.recordType-meta.xml
<RecordType>
    <fullName>Service_Cloud_User_Story</fullName>
    <active>true</active>
    <label>Service Cloud - User Story</label>
</RecordType>