force-app/main/default/objects/copado__User_Story__c/validationRules/Apex_Code_Coverage.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Code_Coverage</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  Apex_Code_Coverage_Exception__c = False,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
  AND(OR(RecordType.Name = &quot;Bug&quot;,RecordType.Name = &quot;User Story&quot;),OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
 copado__Classes_Without_Coverage__c != 0,
 copado__Triggers_Without_Coverage__c != 0,
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
))</errorConditionFormula>
    <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
</ValidationRule>