force-app/main/default/objects/copado__User_Story__c/validationRules/API_Key_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>API_Key_Check</fullName>
    <active>false</active>
    <description>Check if API key is missing from personal settings</description>
    <errorConditionFormula>ISBLANK($Setup.copado__Personal_Settings__c.copado__API_Key__c)</errorConditionFormula>
    <errorMessage>API Key is missing. You can create your dedicated API Key from Account Summary App from App Launcher.</errorMessage>
</ValidationRule>