force-app/main/default/objects/copado__User_Story__c/validationRules/Credential_Change_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_Change_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED( copado__Org_Credential__c ),
    CONTAINS(Previous_Environments__c,  copado__Org_Credential__c ),
    ISPICKVAL(Credential_Change_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please provide a reason for changing the credential back to the Lower Environment.</errorMessage>
</ValidationRule>