force-app/main/default/objects/copado__User_Story__c/validationRules/Justification_for_Code_Coverage.validationRule-meta.xml
<ValidationRule>
    <fullName>Justification_for_Code_Coverage</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Apex_Code_Coverage_Exception__c =true , ISBLANK( Justification_for_Coverage__c ) )</errorConditionFormula>
    <errorDisplayField>Justification_for_Coverage__c</errorDisplayField>
    <errorMessage>Justification shouldn&apos;t be blank if apex code coverage exception is provided.</errorMessage>
</ValidationRule>