force-app/main/default/objects/copado__User_Story__c/validationRules/Userstory_Apex_Validation_SC.validationRule-meta.xml
<ValidationRule>
    <fullName>Userstory_Apex_Validation_SC</fullName>
    <active>true</active>
    <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
    <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
 AND(OR(RecordType.Name = &quot;Service Cloud - Bug&quot;,RecordType.Name = &quot;Service Cloud - User Story&quot;),
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)
)</errorConditionFormula>
    <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
</ValidationRule>